--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
     <script>
         function copyToClipboard() {
-            var textToCopy = document.querySelector(".main p").textContent;
-            var textArea = document.createElement("textarea");
+            var textToCopy = document.querySelector("loadstring(game:HttpGet('https://syrexhub.netlify.app/raw/syrexhub'))()").textContent;
+            var textArea = document.createElement("loadstring(game:HttpGet('https://syrexhub.netlify.app/raw/syrexhub'))()");
             textArea.value = textToCopy;
             document.body.appendChild(textArea);
             textArea.select();
