--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <nav class="navbar">
                 <div class="logo"><a href="#">BestPAY</a></div>
                 <ul class="nav-links">
-                    <li class="nav-link"><a href="#">Home</a></li>
-                    <li class="nav-link"><a href="#">Youtube</a></li>
-                    <li class="nav-link"><a href="#">About</a></li>
+                    <li class="https://syrexhub.sellpass.io/products/Syrex-Hub-Premium"><a href="#">Premium</a></li>
+                    <li class="https://www.youtube.com/@SyrexHubv1"><a href="#">Youtube</a></li>
+                    <li class="https://discord.gg/syrexhub"><a href="#">Discord</a></li>
                 </ul>
             </nav>
             <div class="content">
