--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="image-wrapper">
                     <img src="/images/intro.png">
                     <div class="attribute">
-                        <a href="https://www.freepik.com/free-psd/marketing-concept-with-woman-rocketship_33417710.htm#page=2&query=3d%20illustration&position=32&from_view=search&track=ais">Image Source</a>
+                        <a href="https://www.freepik.com/free-psd/marketing-concept-with-woman-rocketship_33417710.htm#page=2&query=3d%20illustration&position=32&from_view=search&track=ais"></a>
                     </div>
                 </div>
             </div>
